@@ -1,4 +1,4 @@
-#Tue May 30 21:41:25 EST 2006
+#Sat Jun 03 23:35:48 EST 2006
 major_version=2
-minor_version=11
+minor_version=12
 app_name=eLife_simulator
